# steam-giveaway-tool

./: .gitignore  Cargo.toml  README.md  build.rs
.github/: FUNDING.yml
assets/icons/: icon.icns
src/: main.rs  utils.rs
src/app/: friends.rs  mod.rs  preferences.rs  storage_key.rs  winners.rs
src/app/filters/: account_age.rs  exclude_won_before.rs  has_app.rs  include_app_in_wishlist.rs  mod.rs  region.rs
src/steam/: client.rs  get_current_user_country.rs  get_friend_list.rs  get_player_summaries.rs  get_user_summaries.rs  mod.rs  store_item.rs  store_item_user_details.rs  store_search.rs  user.rs
src/ui/: bottom_bar.rs  central_panel.rs  main_window.rs  mod.rs  search_select.rs  settings_window.rs  side_panel.rs  style_override.rs  top_bar.rs  update_window.rs  winners_window.rs
