[package]
name = "steam-giveaway-tool"
version = "1.0.1"
edition = "2024"
authors = ["INikonI <github.com/INikonI>"]
license = "MIT"
description = "Tool for convenient give away among steam friends"
repository = "https://github.com/INikonI/steam-giveaway-tool"
homepage = "https://github.com/INikonI/steam-giveaway-tool"
build = "build.rs"

# Windows
[package.metadata.winresource]
OriginalFilename = "Steam Giveaway Tool.exe"
ProductName = "Steam Giveaway Tool"
FileDescription = "Tool for convenient give away among steam friends"
LegalCopyright = "Copyright © 2025 INikonI (github.com/INikonI). All rights reserved."

# MacOS
[package.metadata.bundle]
name = "Steam Giveaway Tool"
identifier = "io.github.inikoni.steam-giveaway-tool"
copyright = "Copyright © 2025 INikonI (github.com/INikonI). All rights reserved."
icon = ["assets/icons/icon.icns"]

[dependencies]
eframe = { version = "0.31.1", features = ["persistence"] }
egui-notify = "0.19.0"
egui_extras = { version = "0.31.1", features = ["all_loaders"] }
image = "0.25.5"
rand = "0.9.0"
reqwest = { version = "0.12.12", features = ["cookies", "json", "blocking"] }
serde = "1.0.218"
serde_json = "1.0.140"
chrono = { version = "0.4.40", features = ["serde"] }
regex = "1.11.1"
base64 = "0.22.1"
flagcdn = "1"

[build-dependencies]
winresource = "0.1"
